<resources>
    <string name="network_error">Error de conexión al servidor</string>
    <string name="login_login_required">Usuario requerido</string>
    <string name="login_password_required">Contraseña requerida</string>
    <string name="login_error">Usuario y/o contraseña incorrecto</string>
    <string name="plan_list_title">Planes asignados</string>
    <string name="plan_list_empty">No hay ningún plan disponible</string>
    <string name="plan_today_none">No hay ningún plan disponible para hoy</string>
    <string name="plan_list_error_sync">Error al sincronizar el plan</string>
    <string name="plan_list_error_load">Error al cargar el listado de planes</string>
    <string name="plan_sync_error_delete_plan">Error al borrar el plan</string>
    <string name="plan_sync_error_user">Usuario no autorizado</string>
    <string name="plan_sync_error">Error durante la sincronización del plan</string>
    <string name="plan_sync_error_user_conexion">Error de conexion con el servidor API</string>
    <string name="plan_sync_error_conexion">Error de conexion con el servidor API durante la sincronización</string>
    <string name="areas_progress_title">Progreso visitas</string>
    <string name="areas_progress_value" formatted="false">%d DE %d</string>
    <string name="house_create_title">Nueva vivienda</string>
    <string name="house_view_title">Vivienda</string>
    <string name="house_address_required">Dirección requerida</string>
    <string name="house_numAddress_required">Número requerido</string>
    <string name="house_abandoned">Abandonada</string>
    <string name="house_closed">Cerrada</string>
    <string name="house_renuente">Renuente</string>
    <string name="house_inspection">Inspección</string>
    <string name="house_convert_abandoned">Reconvertir Abandonada</string>
    <string name="house_convert_closed">Reconvertir Cerrada</string>
    <string name="house_convert_renuente">Reconvertir Renuente</string>
    <string name="house_convert_inspection">Reconvertir Inspección</string>
    <string name="house_picture">Sacar imagen de la vivienda</string>
    <string name="house_list_error">Error al cargar las viviendas</string>
    <string name="house_qr_error">Error obteniendo la vivienda</string>
    <string name="house_summary_error">Error obteniendo los datos</string>
    <string name="house_list_no_data">No hay viviendas</string>
    <string name="sample_list_no_data">No hay muestras</string>
    <string name="inventory_no_data">No hay datos de inventarios</string>
    <string name="visit_title">Nueva visita</string>
    <string name="visit_code_title">Introducir código vivienda</string>
    <string name="visit_code_next">Siguiente</string>
    <string name="visit_code_ubigeo">Código UBIGEO</string>
    <string name="visit_code_qr">Código QR</string>
    <string name="visit_code_area">Código zona</string>
    <string name="visit_code_house">Código vivienda</string>
    <string name="visit_code_qr_empty">Ninguno</string>
    <string name="visit_code_house_required">Código vivienda requerido</string>
    <string name="visit_code_house_error">Ya existe una vivienda con el código indicado</string>
    <string name="visit_deleted_error">Error al borrar la visita</string>
    <string name="visit_resume">Última Visita</string>
    <string name="visit_save_error">Error guardando la visita</string>
    <string name="visit_gps_title">Capturar posición GPS</string>
    <string name="visit_gps_ommit">Omitir</string>
    <string name="visit_save_qr_error">Error guardando el QR</string>
    <string name="gps_none">Esperando posición…</string>
    <string name="gps_accuracy" formatted="false">Precisión %dm</string>
    <string name="inspection_title">Visita</string>
    <string name="inventory_list_title">Inventario</string>
    <string name="feverish_list_title">Febriles</string>
    <string name="feverish_list_empty">No hay febriles</string>
    <string name="feverish_list_error">Error al cargar los febriles</string>
    <string name="feverish_list_persons">Selección de habitante</string>
    <string name="feverish_recomendatios_title">Recomendaciones</string>
    <string name="feverish_recomendatios">Tiene que acudir al centro de salud</string>
    <string name="feverish_persons_empty">AVISO: Debe dar de alta un nuevo habitante para poder seleccionarlo como febril.</string>
    <string name="visits_summary_title">Resumen visitas</string>
    <string name="houses_summary_title">Casas</string>
    <string name="inventory_summary_title">Inventarios</string>
    <string name="samples_summary_title">Muestras</string>
    <string name="samples_list_error">Error al cargar las muestras</string>
    <string name="inventory_list_error">Error al cargar el inventario</string>
    <string name="symptom_list_empty">No hay síntomas</string>
    <string name="symptom_list_error">Error al cargar los síntomas</string>
    <string name="symptom_list_title">Seleccione síntomas</string>
    <string name="symptom_save_error">Error al guardar los síntomas</string>
    <string name="inventory_comment">Identificación recipiente</string>
    <string name="inventory_focus">¿Es foco?</string>
    <string name="inventory_treated">¿Tratado?</string>
    <string name="inventory_destroyed">¿Destruido?</string>
    <string name="inventory_summary_notice">AVISO: Se ha tratado o destruido sin realizar muestra.</string>
    <string name="inventory_summary_alert">ALERTA: Muestra realizada sin tratar o destruir.</string>
    <string name="inventory_packets" formatted="false">%d %s</string>
    <string name="inventory_registry_deleted">Inventario eliminado</string>
    <string name="inventory_sample" formatted="false">Muestra %s</string>
    <string name="inventory_sample_packets" formatted="false">Muestra %s - %d %s</string>
    <string name="inventory_delete_error">Error al borrar el inventario</string>
    <string name="inventory_delete_visit_error">Error al borrar la visita</string>
    <string name="inventory_restore_error">Error cargando el inventario</string>
    <string name="inventory_select_state">Seleccionar un estado</string>
    <string name="person_list_title">Habitantes</string>
    <string name="person_list_empty">No hay habitantes</string>
    <string name="person_list_error">Error al cargar los habitantes</string>
    <string name="person_detail_title">Habitante</string>
    <string name="person_detail_error">Error al cargar el habitante</string>
    <string name="person_detail_name_required">Debe introducir un nombre</string>
    <string name="person_not_delete_dialog">No se puede eliminar el habitante porque está registrado como febril</string>
    <string name="history_empty">No hay histórico</string>
    <string name="history_list_error">Error al cargar el historico</string>
    <string name="volume_title">Calculadora de moños</string>
    <string name="volume_type">Selectionar tipo de recipiente</string>
    <string name="volume_dimensions">Introducir dimensiones</string>
    <string name="volume_type_cube">Recipiente rectangular</string>
    <string name="volume_type_cylinder">Recipiente cilíndrico</string>
    <string name="volume_liters">Introducir litros del recipiente</string>
    <string name="title_house_code">Introducir código vivienda</string>
    <string name="title_house_gps">Capturar posición GPS</string>
    <string name="title_house_list" formatted="false">Viviendas %s</string>
    <string name="title_house_not_found">Vivienda no encontrada</string>
    <string name="title_qr_scan_result">Resultado escaneo</string>
    <string name="title_confirm_back">Existen cambios sin guardar</string>
    <string name="area_unlock_error">Error activando manzana suplente</string>
    <string name="area_unlock_success">Manzana suplente activada correctamente</string>
    <string name="area_unlock_fail">Pin no válido</string>
    <string name="message_error">Ha ocurrido un error (%d)</string>
    <string name="message_qr_not_found">No se encontrado ninguna vivienda asociada al código QR escaneado</string>
    <string name="message_qr_not_valid">El código QR escaneado no es válido</string>
    <string name="message_sync_confirm">¿Está seguro de querer sincronizar los datos del plan en curso?\n\nLa sincronización dará por finalizado el plan y no se podrán registrar más visitas.</string>
    <string name="message_sync_not_visits">No es posible realizar la sincronización porque no se han registrados visitas en el plan actual.</string>
    <string name="message_sync_not_connection">No es posible realizar la sincronización en estos momentos porque no tiene conexión.</string>
    <string name="message_units_set_to_one">Al marcar foco o tratado no se permite tener más de una unidad.\n\nTendrá que dar de alta la unidad restante aparte.</string>
    <string name="message_units_set_to_one_multiple">Al marcar foco o tratado no se permite tener más de una unidad.\n\nTendrá que dar de alta las %d unidades restantes aparte.</string>
    <string name="message_confirm_back">¿Está seguro de querer salir?</string>
    <string name="message_registry_delete">¿Está seguro de querer eliminar el registro?</string>
    <string name="message_house_delete">¿Está seguro de querer eliminar la vivienda?</string>
    <string name="message_visit_delete">¿Está seguro de querer eliminar la visita?</string>
    <string name="message_error_connection">No tiene conexión</string>
    <string name="message_send_logs">Logs enviados correctamente</string>
    <string name="message_get_data_error">Error obteniendo los datos</string>
    <string name="message_error_info">Ha ocurrido un error</string>
    <string name="message_send_email">Enviando email</string>
    <string name="send_email_logs_error">Error enviando el email</string>
    <string name="send_email_ok">Email enviado correctamente</string>
    <string name="message_close_session">¿Está seguro de querer cerrar la sesión?\n\nLas visitas realizadas se borrarán y no será posible recuperar los datos registrados.\n\nSerá necesario volver a descargar el plan y volver a introducir todas las visitas.</string>
    <string name="message_hint_street_name">Nombre de la calle, apellido de la familia, etc.</string>
    <string name="message_hint_street_number">Número de la calle, código contador eléctrico, etc.</string>
    <string name="address">Dirección</string>
    <string name="date">Fecha</string>
    <string name="destroyed">Destruido</string>
    <string name="feverish">Febriles</string>
    <string name="filters">FILTROS</string>
    <string name="focus">Foco</string>
    <string name="inspected">Inspeccionado</string>
    <string name="order_by">ORDENAR POR</string>
    <string name="password">Contraseña</string>
    <string name="requalify">Reconvertir</string>
    <string name="sample">Muestra</string>
    <string name="treated">Tratado</string>
    <string name="units">Unidades</string>
    <string name="user">Usuario</string>
    <string name="action_camera_qr">Capturar QR</string>
    <string name="action_edit_visit">Editar visita</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="action_save">Guardar</string>
    <string name="action_delete_house">Eliminar vivienda</string>
    <string name="houses_inspected">Inspeccionadas</string>
    <string name="houses_focus">Focos</string>
    <string name="houses_closed">Cerradas</string>
    <string name="houses_reluctant">Renuentes</string>
    <string name="houses_abandoned">Abandonadas</string>
    <string name="houses_treated">Con depósitos tratados</string>
    <string name="houses_destroyed">Con depósitos destruidos</string>
    <string name="houses_larvicide">Larvicida total</string>
    <string name="houses_persons">Número residentes</string>
    <string name="houses_febriles">Número febriles</string>
    <string name="houses_reconverted">Reconvertidas</string>
</resources>