<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Aedes Alert, Support to collect data to combat dengue
  ~ Copyright (C) 2017 Fundación Anesvad
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/action_save"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit_visit"
        android:title="@string/action_edit_visit"
        android:icon="@drawable/action_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_camera"
        android:title="@string/action_camera_qr"
        android:icon="@drawable/action_qr"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_house"
        android:title="@string/action_delete_house"
        app:showAsAction="never"
        android:visible="false"/>

</menu>