<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Aedes Alert, Support to collect data to combat dengue
  ~ Copyright (C) 2017 Fundación Anesvad
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_inspected"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_focus"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_closed"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_reluctant"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_abandoned"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_reconverted"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_treated"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_destroyed"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_larvicide"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_persons"
                        style="@style/Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/houses_febriles"
                        style="@style/Title"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inspected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="11"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/focus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/closed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/reluctant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/abandoned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/reconverted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/treated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/destroyed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="3"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/larvicide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/persons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                    <TextView
                        android:id="@+id/febriles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        style="@style/Title.Primary"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>