<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Aedes Alert, Support to collect data to combat dengue
  ~ Copyright (C) 2017 Fundación Anesvad
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample"
            style="?android:attr/spinnerDropDownItemStyle"/>

        <TextView
            android:id="@+id/sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/primary"
            tools:text="00081817A0AB"
            style="?android:attr/spinnerDropDownItemStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/treated"
            style="?android:attr/spinnerDropDownItemStyle"/>

        <TextView
            android:id="@+id/treated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/primary"
            android:gravity="right"
            tools:text="Si"
            style="?android:attr/spinnerDropDownItemStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destroyed"
            style="?android:attr/spinnerDropDownItemStyle"/>

        <TextView
            android:id="@+id/destroyed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/primary"
            android:gravity="right"
            tools:text="Si"
            style="?android:attr/spinnerDropDownItemStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/units"
            style="?android:attr/spinnerDropDownItemStyle"/>

        <TextView
            android:id="@+id/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/primary"
            android:gravity="right"
            tools:text="1"
            style="?android:attr/spinnerDropDownItemStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:textColor="@color/error"
        android:text="@string/inventory_summary_notice"/>

    <TextView
        android:id="@+id/alert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:textColor="@color/error"
        android:text="@string/inventory_summary_alert"/>

</LinearLayout>