<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Aedes Alert, Support to collect data to combat dengue
  ~ Copyright (C) 2017 Fundación Anesvad
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:background="@color/text"
        android:paddingBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:focusable="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_error"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_error"
            android:gravity="center_horizontal"
            style="@style/TextError"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            tools:text="Versión 1.0.0"/>

    </LinearLayout>

</LinearLayout>